# COCA-ACSOS-2026-Artifact

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  LICENSE  README.md  SUBMISSION_CHECKLIST.md  build.sh  coca_config.yaml  repro.sh
acquisition/: README.md  csv_feature_logger_full.cpp  feature_config_full.csv  reset.cpp
analysis/: compute_variance.py
apps/: coca_test.cpp  coca_train.cpp
data/: README.md
data/variance/: README.md
data/variance/mic/: mic_idle_1.csv  mic_idle_10.csv  mic_idle_11.csv  mic_idle_12.csv  mic_idle_2.csv  mic_idle_3.csv  mic_idle_4.csv  mic_idle_5.csv  mic_idle_6.csv  mic_idle_7.csv  mic_idle_8.csv  mic_idle_9.csv  mic_reset_1.csv  mic_reset_10.csv  mic_reset_11.csv  mic_reset_12.csv  mic_reset_2.csv  mic_reset_3.csv  mic_reset_4.csv  mic_reset_5.csv  mic_reset_6.csv  mic_reset_7.csv  mic_reset_8.csv  mic_reset_9.csv
data/variance/nob/: nob_idle_1.csv  nob_idle_10.csv  nob_idle_11.csv  nob_idle_12.csv  nob_idle_2.csv  nob_idle_3.csv  nob_idle_4.csv  nob_idle_5.csv  nob_idle_6.csv  nob_idle_7.csv  nob_idle_8.csv  nob_idle_9.csv  nob_reset_1.csv  nob_reset_10.csv  nob_reset_11.csv  nob_reset_12.csv  nob_reset_2.csv  nob_reset_3.csv  nob_reset_4.csv  nob_reset_5.csv  nob_reset_6.csv  nob_reset_7.csv  nob_reset_8.csv  nob_reset_9.csv
detector_validation/: README.md  nob_idle_holdout.csv  nob_kick.csv  reproduce_tableVII.sh
detector_validation/models/: nob_bad_model.coca  nob_idle_model.coca
scripts/: make_sample_data.py
src/: coca_model.hpp
src/io/: csv_reader.hpp
src/utils/: config_parser.hpp
tests/: test_losses.cpp
